# tcgcsv

./: .gitignore  Makefile  README.md  TODO.md  local.txt  provider.tf  pyproject.toml  tcgcsv_api_gateway.tf  tcgcsv_bucket.tf  tcgcsv_buckets.tf  tcgcsv_cloudfront_distribution.tf  tcgcsv_lambda-executor_role.tf  tcgcsv_lambda_etl.tf  tcgcsv_lambda_url_expander.tf  tcgcsv_locals.tf  tcgcsv_route53.tf  tcgplayer_json_api_gateway.tf  tcgplayer_json_cloudfront_distribution.tf  tcgplayer_json_lambda_csv_writer.tf  tcgplayer_json_lambda_exapander.tf  tcgplayer_json_lambda_json_writer.tf  tcgplayer_json_lambda_website_writer.tf  tcgplayer_json_locals.tf  tcgplayer_lambda_executor_role.tf
lambda_csv_writer/csv_writer/: csv.py  csv_utils.py  exceptions.py  index.py  main.py  shorten.py  tcgplayersdk.py
lambda_etl/etl/: csv_utils.py  exceptions.py
lambda_expander/: main.py
lambda_support_layer/: requirements.txt
lambda_tcgplayer_etl/tcgplayer_etl/: csv_utils.py  main.py
lambda_url_expander/: main.py
lambda_website_writer/: main.py
tcgcsv_frontend/: .gitignore  docs  faq  faq.html  index.html  manifest.webmanifest  robots.txt  styles.css
test/lambda_csv_writer/: test_csv_writer.py
