[tool.poetry]
name = "tcgcsv"
version = "0.1.0"
description = ""
authors = ["CptSpaceToaster <cptspacetoaster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.26"
smart-open = "^6.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
