[tool.poetry]
name = "tcgcsv"
version = "0.1.0"
description = ""
authors = ["CptSpaceToaster <cptspacetoaster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.26"
smart-open = "^6.3.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
aiohttp-s3-client = "^0.9.3"
merkle-json = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
